--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,558 +1,13 @@
-* {
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-}
+@import"./base";
+@import"./components/header";
+@import"./components/hero";
+@import"./components/footer";
+@import"./pages/index";
+@import"./pages/campeonato";
+@import"./pages/videos";
+@import"./pages/pilotos";
+@import"./pages/notas";
 
-.top-nav {
-    display: none;
-}
-
-body {
-    background: rgb(20, 20, 20);
-}
-
-h2 {
-    color: white;
-    display: flex;
-    justify-content: center;
-    padding-top: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: normal;
-}
-
-h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    color: white;
-}
-
-h4 {
-    font-family: 'Roboto Slab', serif;
-}
-
-p {
-    font-family: 'Roboto Slab', serif;
-    color: white;
-    font-size: 18px;
-}
-
-a {
-    font-family: 'Roboto Slab', serif;
-    font-size: 18px;
-    text-decoration: none;
-    color: white;
-}
-
-.hr {
-    color: white;
-}
-
-li {
-    list-style: none;
-
-}
-
-/* ========================== VARIABLES DE COLORES ========================== */
-/* ========================== VARIABLES DE COLORES ========================== */
-
-$header-color: rgb(30, 30, 30);
-$body-color: rgb(20, 20, 20);
-
-
-/* ========================== HEADER ========================== */
-/* ========================== HEADER ========================== */
-
-header {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    background-color: $header-color;
-    align-items: center;
-
-    .logo {
-        transition: transform 0.3s ease;
-        padding: 1rem 0px;
-
-        &:hover {
-            transform: scale(1.03);
-        }
-    }
-}
-
-.menu {
-    display: flex;
-    justify-content: space-around;
-
-    &>li>.anchor_nav {
-        display: flex;
-        justify-content: space-around;
-        padding: 15px 2vw;
-        color: rgb(235, 235, 235);
-    }
-
-    & li a:hover {
-        color: #fdd558;
-        transition: all .3s;
-        transition: opacity 1.5s;
-        background-color: rgb(25, 25, 25);
-        border-radius: 5px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-}
-
-/* ========================== HERO ========================== */
-/* ========================== HERO ========================== */
-
-
-.hero {
-    video {
-        width: 100%;
-    }
-
-    & .nascar-logo {
-        padding: 10px 0px;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-
-/* ========================== ULTIMAS NOTICIAS ========================== */
-/* ========================== ULTIMAS NOTICIAS ========================== */
-
-
-
-
-#noticias {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    align-content: center;
-    gap: 1vw;
-    justify-content: center;
-    margin-left: auto;
-    justify-items: center;
-    padding-top: 80px;
-    margin-top: -80px;
-
-    .noticia1,
-    .noticia2,
-    .noticia3,
-    .noticia4 {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: repeat(4 auto);
-        grid-template-areas:
-            "a"
-            "b"
-            "c"
-            "d";
-        text-align: center;
-        transition: transform 0.3s ease;
-        padding-top: 30px;
-        max-width: 550px;
-    }
-
-    .noticia1:hover,
-    .noticia2:hover,
-    .noticia3:hover,
-    .noticia4:hover {
-        transform: scale(1.03);
-    }
-
-    .image-container {
-        grid-area: a;
-        border-top: 2px solid white;
-        border-left: 2px solid white;
-        border-right: 2px solid white;
-        width: 100%;
-        height: 100%;
-    }
-}
-
-
-
-
-.titulo {
-    grid-area: b;
-    text-align: center;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-    padding-top: 10px;
-    font-weight: bold;
-    font-size: 100%;
-}
-
-.parrafo {
-    grid-area: c;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-    padding-top: 17px;
-    font-size: 100%;
-}
-
-.ver-noticia-completa {
-    grid-area: d;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-    border-bottom: 2px solid white;
-    font-weight: bold;
-    font-size: 100%;
-
-    &:hover {
-        text-decoration: underline;
-    }
-}
-
-
-
-.ver-completo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.ver-noticias-completas {
-    display: inline-block;
-    padding: 30px 0px;
-
-    &:hover {
-        text-decoration: underline;
-    }
-}
-
-
-
-
-/* ========================== LIDERES DEL CAMPEONATO ========================== */
-/* ========================== LIDERES DEL CAMPEONATO ========================== */
-
-
-.lideres {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-    padding-top: 50px;
-
-}
-
-.pos {
-    width: 18vw;
-    border: 2px solid white;
-    border-radius: 50px;
-    transition: transform 0.3s ease;
-    margin-left: auto;
-    margin-right: auto;
-    min-width: 150px;
-
-    &:hover {
-        background-color: rgb(10, 10, 10);
-        transition: 0.3s;
-        transform: scale(1.02);
-    }
-
-    .img-container {
-        width: 18vw;
-        min-width: 150px;
-    }
-
-}
-
-.nombre {
-    text-align: center;
-    padding-top: 25px;
-
-}
-
-.pts {
-    color: white;
-    text-align: center;
-    padding-bottom: 25px;
-}
-
-.ver-completo {
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-
-    &:hover {
-        text-decoration: underline;
-    }
-}
-
-
-
-/* ========================== ULTIMOS VIDEOS ========================== */
-/* ========================== ULTIMOS VIDEOS ========================== */
-
-.ultimos-videos {
-    padding: 50px 20px;
-    display: flex;
-    justify-content: center;
-    gap: 1vw;
-
-    .vid-container {
-        width: 50%;
-        margin: auto;
-        border: 1px solid white;
-        padding-top: 30%;
-        position: relative;
-
-        & iframe {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 100%;
-            width: 100%;
-        }
-    }
-}
-
-
-
-
-
-/* ========================== PROXIMAS CARRERAS ========================== */
-/* ========================== PROXIMAS CARRERAS ========================== */
-
-.proximas-carreras {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto;
-    gap: 50px;
-    padding-top: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-
-    .carrera .nombre {
-        grid-area: b;
-        font-size: 100%;
-    }
-}
-
-.carrera {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-        "a"
-        "b"
-        "c";
-    border: white solid 2px;
-    border-radius: 50px;
-    transition: transform 0.3s ease;
-
-    &:hover {
-        background-color: rgb(10, 10, 10);
-        transition: 0.3s;
-        transform: scale(1.02);
-    }
-}
-
-
-
-.imgs {
-    grid-area: a;
-    width: 100%;
-    padding: 10px;
-}
-
-
-.fecha {
-    grid-area: c;
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    font-size: 100%;
-}
-
-/* ========================== FOOTER ========================== */
-/* ========================== FOOTER ========================== */
-
-footer {
-    background-color: $body-color;
-    color: white;
-    padding: 20px;
-
-    .footer-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .copy {
-            text-align: center;
-            flex-grow: 1;
-            margin-left: 180px;
-        }
-
-        .social a {
-            margin-left: 10px;
-        }
-    }
-}
-
-
-/* ========================== CAMPEONATO ========================== */
-/* ========================== CAMPEONATO ========================== */
-
-
-table {
-    width: 70vw;
-    height: 70vw;
-    border-collapse: collapse;
-    margin: 10px auto;
-}
-
-th {
-    border: 2px solid white;
-    color: white;
-    text-align: center;
-    background-color: rgb(30, 30, 30);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 80%;
-    color: white;
-}
-
-td {
-    border: 2px solid white;
-    color: white;
-    text-align: center;
-    font-family: 'Racing Sans One', cursive;
-    font-size: 80%;
-}
-
-.img-tabla {
-    width: 50px;
-}
-
-
-/* ========================== VIDEOS ========================== */
-/* ========================== VIDEOS ========================== */
-
-
-.videos {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
-    padding: 40px;
-    gap: 30px;
-
-    .vid-container {
-        width: 90%;
-        margin: auto;
-        border: 1px solid white;
-        padding-top: 320px;
-        position: relative;
-
-        & iframe {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 100%;
-            width: 100%;
-        }
-    }
-}
-
-
-
-
-/* ========================== PILOTOS ========================== */
-/* ========================== PILOTOS ========================== */
-
-
-.pilotos {
-    display: flex;
-    justify-content: center;
-    padding: 30px 0px;
-    width: 80%;
-    margin: 0 auto;
-
-    .pilotos-container {
-        display: grid;
-        grid-template-columns: repeat(5, auto);
-        grid-template-rows: repeat(6, auto);
-        gap: 30px;
-    }
-
-    .pos img {
-        width: 100%;
-    }
-
-    .pilotos .pos h3 {
-        font-size: 80%;
-        padding: 10px 10px;
-    }
-}
-
-
-
-
-
-
-/* ========================== SECCION NOTA ========================== */
-/* ========================== SECCION NOTA ========================== */
-
-.section-nota {
-    padding: 50px;
-
-    .article-nota {
-        margin-bottom: 20px;
-        background-color: $header-color;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-
-        h2 {
-            padding-top: 10px;
-        }
-
-        .fecha {
-            color: #999;
-            font-style: italic;
-            margin-top: 5px;
-            transition: color 0.3s ease;
-            display: flex;
-            justify-content: center;
-        }
-
-        .image-container {
-            text-align: center;
-            overflow: hidden;
-            transition: transform 0.3s ease;
-
-            &:hover img {
-                transform: scale(1.1);
-                border-radius: 5px;
-            }
-
-            img {
-                max-width: 80%;
-                border-radius: 5px;
-                margin-top: 20px;
-                transform: scale(1);
-                transition: transform 0.3s ease;
-            }
-        }
-
-        .content-nota {
-            margin-top: 20px;
-            line-height: 1.5;
-            transition: opacity 0.3s ease;
-        }
-
-    }
-}
 
 
 /* ========================== MODO TABLET ========================== */
