--- a/scss/pages/_pilotos.scss
+++ b/scss/pages/_pilotos.scss
@@ -25,3 +25,41 @@
         padding: 10px 10px;
     }
 }
+
+/* ========================== MODO TABLET ========================== */
+/* ========================== MODO TABLET ========================== */
+
+@media screen and (max-width : 1100px) {
+    .pilotos .pilotos-container {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(6, auto);
+        gap: 30px;
+    }
+}
+
+/* ========================== BREAKPOINT INTERMEDIO ENTRE TABLET Y SMARTPHONE ========================== */
+/* ========================== BREAKPOINT INTERMEDIO ENTRE TABLET Y SMARTPHONE ========================== */
+
+@media screen and (max-width : 800px) {
+    .pilotos-container {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(6, auto);
+        gap: 30px;
+
+        .pos {
+            width: 18vw;
+            border: 2px solid white;
+            border-radius: 50px;
+            transition: transform 0.3s ease;
+            margin-left: auto;
+            margin-right: auto;
+            min-width: 120px;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
