--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  background-color: rgb(30, 30, 30);
+  background-color: #1e1e1e;
   align-items: center;
 }
 header .logo {
