--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  background-color: #1e1e1e;
+  background-color: rgb(30, 30, 30);
   align-items: center;
 }
 header .logo {
@@ -187,6 +187,7 @@ footer .footer-container .social a {
   padding-top: 10px;
   font-weight: bold;
   font-size: 100%;
+  margin-bottom: 0;
 }
 
 .parrafo {
@@ -195,6 +196,7 @@ footer .footer-container .social a {
   border-right: 2px solid white;
   padding-top: 17px;
   font-size: 100%;
+  margin-bottom: 0;
 }
 
 .ver-noticia-completa {
