--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -29,7 +29,6 @@
         transition: transform 0.3s ease;
         padding-top: 30px;
         max-width: 550px;
-        
     }
 
     .noticia1:hover,
@@ -57,6 +56,7 @@
     padding-top: 10px;
     font-weight: bold;
     font-size: 100%;
+    margin-bottom: 0;
 }
 
 .parrafo {
@@ -65,6 +65,7 @@
     border-right: 2px solid white;
     padding-top: 17px;
     font-size: 100%;
+    margin-bottom: 0;
 }
 
 .ver-noticia-completa {
